--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,34 @@
 body {
     background-color: black;
     color:white;
+    margin:0;
+    padding:0 100px;
+}
+
+button{
+    border-radius: 15px;
+    font-size: 20px;
+}
+
+button:hover{
+    background-color: black;
+    color:white;
+    cursor: pointer;
 }
 
 #main-image{
     width: 50%;
     height: 50%;
+}
+
+nav{
+    display:flex;
+    justify-content: space-between;
+    gap:50px;
+    margin-bottom:30px;
+}
+
+nav > button{
+    height: 50px;
+    flex:auto;
 }
